# cmake-project-template

./: CMakeLists.txt  README.md
.github/workflows/: blank.yml
cmake/: FindOpenMesh.cmake
include/: HelloWorld.h
src/: HelloWorld.cpp  main.cpp
